# Rcsdp

./: CHANGES  DESCRIPTION  MD5  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac
R/: Rcsdp.R  convert.R  sdpa.R  sparse.R  sparseMat.R
man/: csdp-sparse.Rd  csdp.Rd  csdp.control.Rd  readsdpa.Rd
src/: Makevars.in  Makevars.win  Rcsdp.c  convert.c  testing.c
src/Csdp/include/: declarations.h
src/Csdp/lib/: Fnorm.c  Makefile  add_mat.c  addscaledmat.c  allocmat.c  calc_dobj.c  calc_pobj.c  chol.c  copy_mat.c  easysdp.c  freeprob.c  initparams.c  initsoln.c  linesearch.c  make_i.c  makefill.c  mat_mult.c  mat_multsp.c  matvec.c  norms.c  op_a.c  op_at.c  op_o.c  packed.c  psd_feas.c  qreig.c  readprob.c  readsol.c  sdp.c  solvesys.c  sortentries.c  sym_mat.c  trace_prod.c  tweakgap.c  user_exit.c  writeprob.c  writesol.c  zero_mat.c
